--- a/style.css
+++ b/style.css
@@ -42,29 +42,27 @@ p {
 
 .links:hover {
     background-color: cornsilk;
+    float: left;
 }
 
-#References {
-    
-    width: 100%;
-    height: 800px;
-    background-color: blanchedalmond;
-}
 #My Work {
     width: 100%;
     height: 800px;
     background-color: beige;
 }
+
 #Insperation {
     width: 100%;
     height: 800px;
     background-color: deepskyblue;
 }
-#My Favorite Book{
+
+#My Favorite Book {
     width: 100%;
     height: 800px;
     background-color: darkkhaki;
 }
+
 img {
     transition: transform .2s;
 }
@@ -73,5 +71,12 @@ img:hover {
     transform: scale(0.9);
 }
 
+#contacts {
+    background: firebrick;
+    text-decoration-color: black;
+}
 
-
+.contact_1 a {
+    color: currentColor;
+    text-shadow: 3px 3px gainsboro;
+}
